# mcpe-scriptdebugger

./: CMakeLists.txt  Log.cpp  README  main.cpp  main.h  mcpelauncher_api.h  statichook.h
cohtml/: CohtmlHooks.cpp  TCPServerImpl.cpp  TCPServerImpl.h
dep/: asio.cmake  boost.cmake  v8.cmake  websocket.cmake
extra/: StdPolyfills.cpp  StdPolyfills.h
inspector/: HttpSession.cpp  HttpSession.h  HttpSessionHandler.h  InspectorManager.cpp  InspectorManager.h  InspectorServer.cpp  InspectorServer.h  InspectorWebSocketChannel.cpp  InspectorWebSocketChannel.h  InspectorWebSocketManager.cpp  InspectorWebSocketManager.h  InspectorWebSocketSession.cpp  InspectorWebSocketSession.h  Listener.cpp  Listener.h  String16.h  WebSocketSession.cpp  WebSocketSession.h  WebSockets.h
minecraft/: Cohtml.h  Crypto.h  FilePathManager.h  Keyboard.h  MinecraftGame.h  Util.h
